--- a/style.css
+++ b/style.css
@@ -90,3 +90,31 @@ main {
 .fa-primary .fa-secondary {
   transition: var(--transition-speed);
 }
+/* logo css */
+.logo {
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  text-align: center;
+  color: var(--text-secondary);
+  background: var(--bg-secondary);
+  font-size: 1.5rem;
+  letter-spacing: 0.3ch;
+  width: 100%;
+}
+.logo svg {
+  transform: rotate(0deg);
+  transition: transform var(--transition-speed);
+}
+.navbar:hover .logo:hover {
+  transform: rotate(-180deg);
+}
+/* stop logo text from rotating */
+
+/* small screens  */
+@media only screen and (max-width: 600px) {
+}
+
+/* large screens */
+@media only screen and (min-width: 600px) {
+}
