--- a/style.css
+++ b/style.css
@@ -32,8 +32,6 @@ main {
 }
 /* navbar */
 .navbar {
-  width: 5rem;
-  height: 100vh;
   position: fixed;
   background-color: var(--bg-primary);
   transition: width 200ms ease;
@@ -75,12 +73,7 @@ main {
   min-width: 2rem;
   margin: 0 1.5rem;
 }
-.navbar:hover {
-  width: 16rem;
-}
-.navbar:hover .link-text {
-  display: block;
-}
+
 .fa-primary {
   color: #ff7eee;
 }
@@ -112,9 +105,38 @@ main {
 /* stop logo text from rotating */
 
 /* small screens  */
+/* puts navbar at bottom for app like experience on small screens */
 @media only screen and (max-width: 600px) {
+  .navbar {
+    bottom: 0;
+    width: 100vw;
+    height: 5rem;
+  }
+  .logo {
+    display: none;
+  }
+  .navbar-nav {
+    flex-direction: row;
+    /* display: flex; */
+  }
+  .nav-link {
+    justify-content: center;
+  }
+  main {
+    margin: 0;
+  }
 }
 
 /* large screens */
 @media only screen and (min-width: 600px) {
+  .navbar {
+    width: 5rem;
+    height: 100vh;
+  }
+  .navbar:hover {
+    width: 16rem;
+  }
+  .navbar:hover .link-text {
+    display: block;
+  }
 }
